# image-tagging-service

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: architecture.md
src/image_tagging_service/: __init__.py  config.py  main.py
src/image_tagging_service/api/: dependencies.py
src/image_tagging_service/api/middleware/: auth.py
src/image_tagging_service/api/models/: requests.py  responses.py
src/image_tagging_service/api/routes/: caption.py  classify.py  health.py  rate.py  review.py
src/image_tagging_service/core/: logging.py
src/image_tagging_service/services/: classifier.py  image_processor.py  tag_matcher.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_classifier.py  test_image_processor.py  test_tag_matcher.py
